--- a/javascript/ex003.html
+++ b/javascript/ex003.html
@@ -19,10 +19,12 @@
 
     <script>
         
-        var n1 = window.prompt('Digite um número: ')
-        var n2 = window.prompt('Digite outro numero: ')
+        var n1 = Number.parseInt(window.prompt('Digite um número: '))
+        var n2 = Number.parseInt(window.prompt('Digite outro numero: '))
         var s = n1 + n2
-        window.alert('A soma dos valores é ' + s)
+        window.alert('A soma dos valores é ' + s)//CONCATENAÇÃO 
+        // (NUMBER + NUMBER)PARA ADIÇÃO
+        // (STRING + STRING) PARA CONCATENAÇÃO
 
     
     </script>
