soma de valores

--- a/javascript/ex003.html
+++ b/javascript/ex003.html
@@ -19,8 +19,8 @@
 
     <script>
         
-        var n1 = Number.parseInt(window.prompt('Digite um número: '))
-        var n2 = Number.parseInt(window.prompt('Digite outro numero: '))
+        var n1 = Number(window.prompt('Digite um número: ')) // String
+        var n2 = Number(window.prompt('Digite outro numero: ')) // String
         var s = n1 + n2
         window.alert('A soma dos valores é ' + s)//CONCATENAÇÃO 
         // (NUMBER + NUMBER)PARA ADIÇÃO
