--- a/javascript/ex003.html
+++ b/javascript/ex003.html
@@ -22,7 +22,8 @@
         var n1 = Number(window.prompt('Digite um número: ')) // String
         var n2 = Number(window.prompt('Digite outro numero: ')) // String
         var s = n1 + n2
-        window.alert('A soma dos valores é ' + s)//CONCATENAÇÃO 
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s} `)
+        //CONCATENAÇÃO 
         // (NUMBER + NUMBER)PARA ADIÇÃO
         // (STRING + STRING) PARA CONCATENAÇÃO
 
